--- a/src/app/components/cv/liste/liste.component.html
+++ b/src/app/components/cv/liste/liste.component.html
@@ -1,5 +1,4 @@
 <div class="d-flex flex-column gap-3 container">
-    Liste Component
-    <div class="p-2">  <app-item (event)="fireEvent($event)"></app-item>
+    <div class="p-2">  <app-item *ngFor="let cv of cvs" [cv]="cv"  (event)="fireEvent($event)"></app-item>
     </div>
 </div>
