--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -1,7 +1,9 @@
-<div class="container">
-    Cv component
+<div class="d-flex flex-column gap-5">
   <div class="po-3 d-flex gap-2">
     <div class="p-2"><app-liste (event)="displayDetails($event)"></app-liste></div>
     <div class="p-2 flex-fill"><app-detail [details]="details"></app-detail></div>
+  </div>
+  <div class="p-2" >
+    <app-embauche></app-embauche>
   </div>
 </div>
