--- a/src/app/components/cv/detail/detail.component.scss
+++ b/src/app/components/cv/detail/detail.component.scss
@@ -1,3 +1,31 @@
 .container{
-    background-color: greenyellow;
+    padding-top: 2vh;
+}
+.name{
+    color: rebeccapurple;
+    font-size: 40px;
+    font-weight: 600;
+}
+.title{
+    font-size: 22px;
+    color: blueviolet;
+    font-weight: 700;
+}
+.item{
+    font-weight: 700;
+}
+.btn{
+    background-color: rebeccapurple;
+    color: white;
+    font-weight: 600;
+    border-radius: 6px;
+}
+.btn:hover{
+    background-color: white;
+    color: rebeccapurple;
+    border: solid 1px rebeccapurple;
+}
+.border{
+    border: solid 2px purple;
+    border-radius: 6px;
 }
